# UrbanMind

./: .env.example  .gitignore  README.md  UrbanMind.pptx  docker-compose.yml  mosquitto.conf  nginx.conf  pyproject.toml  render.yaml  vercel.json
.github/workflows/: deploy-render.yml  deploy-vercel.yml
backend/: Dockerfile  config.py  main.py  requirements.txt  scripts_seed.py
backend/models/: __init__.py  emergency.py  intersection.py  signal.py  vehicle.py
backend/routers/: analytics.py  emergency.py  intersections.py  signals.py  video.py  ws.py
backend/services/: cv_engine.py  emergency_manager.py  live_processor.py  mqtt_client.py  signal_controller.py  simulator.py  siren_classifier.py  state_manager.py  video_processor.py  webster.py
backend/utils/: __init__.py  failsafe.py  haversine.py  lane_roi.py  rtsp_parser.py
cv-engine/: Dockerfile  benchmark.py  calibrate.py  detector.py  requirements.txt  trainer.py
docs/: HACKATHON_TECH_REPORT.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: benchmark_edge.sh  run_local.sh  seed.py  seed_intersections.py  setup.sh
simulator/: Dockerfile  requirements.txt  scenario_emergency.json  scenario_rush_hour.json  traffic_sim.py
src/traffic_ai/: __init__.py  (+6 more)
tests/: test_emergency.py  test_optimizer.py
urbanmind/: .env.example  README.md  __init__.py  docker-compose.yml  run_all.sh  vercel.json
(+116 files in other folders)
