[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-ai-optimizer"
version = "0.1.0"
description = "Dynamic AI traffic flow optimizer with emergency green-corridor support."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
